// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionIssue with appeal 1`] = `
<div
  class="PerfectionIssue"
>
  <h3
    class="PerfectionIssue-Title"
  >
    <span
      class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_warning PerfectionIssue-LevelIcon"
    />
    Руководитель вне кадровой иерархии
    <span
      class="PerfectionIssue-Weight"
    >
      10%
    </span>
  </h3>
  <div
    class="WikiFormatter PerfectionIssue-Description"
  />
  <div
    class="WikiFormatter PerfectionIssue-Recommendation"
  />
  <p
    class="PerfectionIssue-AppealInfo"
  >
    i18n:on-review
  </p>
</div>
`;

exports[`PerfectionIssue without appeal, with execution 1`] = `
<div
  class="PerfectionIssue"
>
  <h3
    class="PerfectionIssue-Title"
  >
    <span
      class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_warning PerfectionIssue-LevelIcon"
    />
    Руководитель вне кадровой иерархии
    <span
      class="PerfectionIssue-Weight"
    >
      10%
    </span>
  </h3>
  <div
    class="WikiFormatter PerfectionIssue-Description"
  />
  <div
    class="WikiFormatter PerfectionIssue-Recommendation"
  />
  {"component":"PerfectionExecution","props":{"className":"PerfectionIssue-Execution","execution":{"name":{"ru":"Сервис перейдет в статус Требуется информация"},"applyDate":"2019-09-17T00:15:16.000Z"}}}
</div>
`;

exports[`PerfectionIssue without appeal, without execution 1`] = `
<div
  class="PerfectionIssue"
>
  <h3
    class="PerfectionIssue-Title"
  >
    <span
      class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_warning PerfectionIssue-LevelIcon"
    />
    Руководитель вне кадровой иерархии
    <span
      class="PerfectionIssue-Weight"
    >
      10%
    </span>
  </h3>
  <div
    class="WikiFormatter PerfectionIssue-Description"
  />
  <div
    class="WikiFormatter PerfectionIssue-Recommendation"
  />
</div>
`;

exports[`PerfectionIssue without id and appealed 1`] = `
<div
  class="PerfectionIssue"
>
  <h3
    class="PerfectionIssue-Title"
  >
    <span
      class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_ok PerfectionIssue-LevelIcon"
    />
    Руководитель вне кадровой иерархии
    <span
      class="PerfectionIssue-Weight"
    >
      10%
    </span>
  </h3>
  <p
    class="PerfectionIssue-AppealInfo"
  >
    i18n:appealed
  </p>
</div>
`;
